--- a/proyecto/appsettings.json
+++ b/proyecto/appsettings.json
@@ -5,10 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=proyecto.db",
-    "aeropuertopCollectionContext": "DataSource=proyecto.db",
-    "aeropuertoCollectionContext": "Server=(localdb)\\mssqllocaldb;Database=aeropuertoCollectionContext-eef89aff-9eb7-4164-8d6a-645d67ad7b11;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "aeropuertoCpollectionContext": "Server=(localdb)\\mssqllocaldb;Database=aeropuertoCpollectionContext-4baa686e-4ef0-4d3c-a96e-83b24be8c3d0;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "ConnectionStrings": { "DefaultConnection":"Data Source=proyecto.db"}
 }
