--- a/proyecto/appsettings.json
+++ b/proyecto/appsettings.json
@@ -5,5 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection":"Data Source=proyecto.db"}
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=proyecto.db",
+    "aeropuertoCollectionContextConnection": "DataSource=proyecto.db"
+  }
 }
